# api-convert-files

./: README.md  manage.py  pyproject.toml
src/core/convert/factory/creater/: converter.py  converter_dynamic.py
src/core/convert/factory/creater/dto/: input.py
src/core/convert/factory/creater/exceptions/: erros.py
src/core/convert/factory/creater/interface/: abstract_factory.py
src/core/convert/factory/product/: convert_csv_to_json.py  convert_json_to_csv.py  convert_xlsx_to_csv.py  interface.py
src/core/convert/factory/product/dto/: output.py
src/core/convert/factory/product/interface/: abstract_converter.py
src/core/convert/service/: converter_file.py
src/core/convert/service/dto/: input.py  output.py
src/core/convert/service/utils/: clear_dir.py
src/infra/: asgi.py  settings.py  urls.py  wsgi.py
src/infra/convert/routers/: controllers.py
src/infra/convert/routers/dto/: enum.py
src/infra/convert/routers/execeptions/: handlers.py
src/infra/convert/tmp/: query_results-2024-09-13_101930.csv  query_results-2024-09-13_101930.xlsx  unidades (1).csv  unidades (1).json  unidades(2).csv  unidades(2).json
